[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/data/dimbo_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://textures.png" type="Texture" id=2]
[ext_resource path="res://addons/SmoothScroll/SmoothScroll.tscn" type="PackedScene" id=3]
[ext_resource path="res://shaders/card_glow_wobble.tres" type="Material" id=4]
[ext_resource path="res://effects/card_glow.png" type="Texture" id=5]
[ext_resource path="res://masks/card_image_mask.png" type="Texture" id=6]
[ext_resource path="res://card/card.gd" type="Script" id=7]
[ext_resource path="res://themes/no_scroll_bar.theme" type="Theme" id=8]
[ext_resource path="res://fonts/data/NotoSansMono-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=2]
size = 80
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.101961, 0.180392, 1 )
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="DynamicFont" id=3]
size = 60
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 416.627, 614.707 )

[node name="Card" type="KinematicBody2D" groups=["card"]]
position = Vector2( 0, -1 )
scale = Vector2( 0.7, 0.7 )
input_pickable = true
script = ExtResource( 7 )

[node name="card_glow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 4 )
position = Vector2( -1.42853, -520 )
scale = Vector2( 6, 6.62579 )
texture = ExtResource( 5 )

[node name="CardBG" type="Sprite" parent="."]
position = Vector2( 6.66669, -520 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 40, 1050, 1000, 1410 )

[node name="Line" type="Sprite" parent="."]
position = Vector2( 4.03108, -1032 )
scale = Vector2( 1.94798, 1 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 20, 990, 360, 30 )

[node name="Sprite" type="TextureRect" parent="."]
light_mask = -2147483647
margin_left = -346.605
margin_top = -977.428
margin_right = 353.395
margin_bottom = -477.428
rect_clip_content = true
mouse_filter = 2
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Sprite"]
position = Vector2( -57.7267, -69.5719 )
texture = ExtResource( 6 )
offset = Vector2( 400, 300 )
mode = 3
range_item_cull_mask = -2147483648

[node name="Title" type="Label" parent="."]
margin_left = -302.0
margin_top = -1082.0
margin_right = -302.0
margin_bottom = -986.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmoothScroll" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -311.0
margin_top = -410.0
margin_right = 303.0
margin_bottom = -20.0
theme = ExtResource( 8 )

[node name="Text" type="RichTextLabel" parent="SmoothScroll"]
light_mask = 1025
margin_top = 1.0
margin_right = 776.0
margin_bottom = 491.0
rect_scale = Vector2( 0.8, 0.8 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -3.33331, -525 )
shape = SubResource( 4 )
one_way_collision = true

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
